--- a/app/views/category/show.html.haml
+++ b/app/views/category/show.html.haml
@@ -10,5 +10,5 @@
   %article.row
     - @category.videos.each do |video|
       .video.col-md-2
-        = link_to show_video_path(video) do 
+        = link_to video_path(video) do 
           %img(src="#{video.small_cover_url}")
