--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,22 +1,28 @@
 %section#top-header.row
   %h1.col-md-2
-    = link_to "MyFLiX"
+    = link_to "MyFLiX", root_path
   %ul.col-md-4.clearfix
-    %li= link_to "Videos"
+    %li= link_to "Videos", home_path
     %li= link_to "My Queue"
     %li= link_to "People"
-  %form.col-md-5.navbar-form(action="")
+  =form_tag(search_video_index_path, method: "get", class: "col-md-5 navbar-form") do
     .form-group
-      %input.form-control(type="text" placeholder="Search for videos here")
-    %button.btn.btn-default(type="submit") Search
+      =text_field_tag(:search, "Search for Vidoes Here", class: "form-control")
+      =submit_tag("Search", class: "btn btn-default")
   #user_links.pull-right
     %ul
       %li.dropdown
-        %a(href="#" id="dlabel" role="button" data-toggle="dropdown" class="dropdown-toggle" data-target="#")
-          Welcome, Philip J. Fry
-          %b.caret
+        -if current_user
+          %a(href="#" id="dlabel" role="button" data-toggle="dropdown" class="dropdown-toggle" data-target="#")
+            Welcome, #{current_user.username}
+            %b.caret
         %ul.dropdown-menu(role="menu" aria-labelledby="dlabel")
           %li
             %a(href="#") Account
             %a(href="#") Plan and Billing
-            %a(href="#") Sign Out
+            =link_to "Logout", logout_path
+
+/  %form.col-md-5.navbar-form(action="")
+/    .form-group
+/      %input.form-control(type="text" placeholder="Search for videos here")
+/    %button.btn.btn-default(type="submit") Search
