--- a/app/views/video/home.html.haml
+++ b/app/views/video/home.html.haml
@@ -3,7 +3,7 @@
     %header
       %h3= link_to "#{category.name}", show_category_path(category)
     .videos.row
-      - category.videos.each do |video|
+      - category.recent_videos.each do |video|
         .video.col-sm-2
-          = link_to show_video_path(video.id.to_s) do
+          = link_to video_path(video.id.to_s) do
             %img(src="#{video.small_cover_url}")
