--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,9 +3,9 @@
     = link_to "MyFLiX", root_path
   %ul.col-md-4.clearfix
     %li= link_to "Videos", home_path
-    %li= link_to "My Queue"
-    %li= link_to "People"
-  =form_tag(search_video_index_path, method: "get", class: "col-md-5 navbar-form") do
+    %li= link_to "My Queue", my_queue_path
+    %li= link_to "People", people_path
+  =form_tag(search_videos_path, method: "get", class: "col-md-5 navbar-form") do
     .form-group
       =text_field_tag(:search, "Search for Vidoes Here", class: "form-control")
       =submit_tag("Search", class: "btn btn-default")
@@ -16,11 +16,11 @@
           %a(href="#" id="dlabel" role="button" data-toggle="dropdown" class="dropdown-toggle" data-target="#")
             Welcome, #{current_user.username}
             %b.caret
-        %ul.dropdown-menu(role="menu" aria-labelledby="dlabel")
-          %li
-            %a(href="#") Account
-            %a(href="#") Plan and Billing
-            =link_to "Logout", logout_path
+          %ul.dropdown-menu(role="menu" aria-labelledby="dlabel")
+            %li
+              =link_to "Account", user_path(current_user)
+              %a(href="#") Plan and Billing
+              =link_to "Logout", logout_path
 
 /  %form.col-md-5.navbar-form(action="")
 /    .form-group
