rspec all passing

--- a/app/views/app_mailer/password_reset_token.html.haml
+++ b/app/views/app_mailer/password_reset_token.html.haml
@@ -4,7 +4,9 @@
     Password Reset Mail For #{@user.username.capitalize}
   %p
     please click the button bellow to change your password
-  =link_to "Reset Password", new_password_path(reset_token: @user.reset_token), class: 'btn btn-default'
+  =link_to "Reset Password", new_password_url(reset_token: @user.reset_token), class: 'btn btn-default'
   %p
     If you did not chose to reset your password, ignore this email
+
+
 
