--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -20,6 +20,7 @@
             %li
               =link_to "Account", user_path(current_user)
               %a(href="#") Plan and Billing
+              =link_to "Invite Friends", new_invite_path
               =link_to "Logout", logout_path
 
 /  %form.col-md-5.navbar-form(action="")
