--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -3,23 +3,9 @@
     .col-sm-10.col-sm-offset-1
       =bootstrap_form_for @user, class: "form-horizontal" do |f|
         =f.text_field :username
-        =f.email_field :email
+        =f.email_field :email, value: params[:email]
+        =hidden_field_tag :invite_token, params[:invite_token] if params[:invite_token]
         =f.password_field :password
         =f.submit "Sign Up", class: 'btn btn-default'
-/      %form.form-horizontal
-/        %header
-/          %h1 Register
-/        %fieldset
-/          .form-group
-/            %label.control-label.col-sm-2 Email Address
-/            .col-sm-6
-/              %input.form-control(type="email")
-/          .form-group
-/            %label.control-label.col-sm-2 Password
-/            .col-sm-6
-/              %input.form-control(type="password")
-/          .form-group
-/            %label.control-label.col-sm-2 Full Name
-/            .col-sm-6
-/              %input.form-control(type="text")
+
         
