--- a/app/views/users/new_password.html.haml
+++ b/app/views/users/new_password.html.haml
@@ -1,13 +1,11 @@
 %section.reset_password.container
   .row
     .col-sm-10.col-sm-offset-1
-      %form
-        %header
-          %h1 Reset Your Password
-        =form_tag create_password_path, method: 'post'
-          %fieldset.form-group
-            =label_tag :password
-            =password_field_tag :password
-            =hidden_field_tag :reset_token, value: @user.reset_token
-            =submit_tag "Reset Password", class: 'btn btn-default'
-
+      %header
+        %h1 Reset Your Password
+      =form_tag create_password_path, method: :post do
+        %fieldset.form-group
+          =label_tag :password
+          =password_field_tag :password
+          =hidden_field_tag :token, @user.reset_token
+          =submit_tag "Reset Password", class: 'btn btn-default'
