week 7 and start of week 8

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -21,6 +21,8 @@
               =link_to "Account", user_path(current_user)
               %a(href="#") Plan and Billing
               =link_to "Invite Friends", new_invite_path
+              -if current_user.admin?
+                =link_to "Add Video", new_admin_video_path
               =link_to "Logout", logout_path
 
 /  %form.col-md-5.navbar-form(action="")
