--- a/app/views/videos/show.html.haml
+++ b/app/views/videos/show.html.haml
@@ -9,7 +9,7 @@
           %span #{@video.average_rating}
         %p #{@video.description}
         .actions
-          %a.btn.btn-primary(href="") Watch Now
+          %a.btn.btn-primary(href="#{@video.video_url}") Watch Now
           =link_to "+ My Queue", queue_items_path(@video), method: 'post', class: 'btn btn-primary' if !current_user.has_queued_video?(@video)
 
 %section.reviews.container
